saving work created a baseline search system

--- a/index.html
+++ b/index.html
@@ -3,14 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>AOE4 Stats</title>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
 </head>
 <body>
   <h1>AOE4 Stats</h1>
-  <input placeholder="Player Name">
-  <button>Search</button>
-  <div></div>
 
+  <input placeholder="Player Name3">
+  <button id="playerSubmit">Search</button>
+  <div id="playerResult"></div> 
+
+
+
+  <input id="playerNameInput" placeholder="Player Name">
+  <button id="searchButton">Search</button>
+  <div id="result"></div>
 
   <script src="./index.js"></script>
 </body>
